--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Dat Nguyen",
   "license": "MIT",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
     "request": "^2.88.2",
-    "request-promise": "^4.2.6"
+    "request-promise": "^4.2.6",
+    "tough-cookie-file-store": "^2.0.2"
   }
 }
